# polynom

./: CMakeLists.txt  Readme.md  polynom.cpp  polynom.hpp
.github/workflows/: wf_tests.yml
src/: polynom.hpp
tests/: test_basic.cpp  test_custom.cpp
